--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,35 +8,14 @@
   <meta name="author" content="">
   <title><%= yield :page_title %><%= yield :page_title %>Starter Template for Bootstrap</title>
 
-  <%= stylesheet_link_tag 'application.css', media: 'all', 'data-turbolinks-track' => true %>
+  <%#= stylesheet_link_tag 'application.css', media: 'all', 'data-turbolinks-track' => true %>
 
-  <%#= javascript_include_tag 'application.js', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <%= yield :after_css %>
   <%= yield :after_css %>
 </head>
 <body class="controller-<%= controller.controller_name.dasherize %> action-<%= controller.action_name.dasherize %>">
 
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to "HeyMove Delivery", "#", class: "navbar-brand" %>
-    </div>
-    <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
 <div class="container">
   <% flash.each do |name, msg| %>
     <%= content_tag :div, class: "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable", role: "alert" do %>
@@ -69,7 +48,7 @@
   <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="//code.jquery.com/ui/2.4/jquery-ui.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <%= javascript_pack_tag "application" %>
+
   <%= yield :after_js %>
 
   <footer id="content-footer" role="contentinfo">
@@ -101,7 +80,7 @@
   <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="//code.jquery.com/ui/2.4/jquery-ui.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <%= javascript_pack_tag "application" %>
+
   <%= yield :after_js %>
 
 </div>
